{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 1291,
  "lineage": "92cd7ef6-070f-5450-30cd-944a208c41cc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8080,
            "id": "sgrule-153841576",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09dbcf3eae8dbc378",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_security_groups.sg_id",
            "module.nomad-starter.module.nomad_cluster.aws_autoscaling_group.nomad_clients",
            "module.nomad-starter.module.nomad_cluster.aws_autoscaling_group.nomad_servers",
            "module.nomad-starter.module.nomad_cluster.aws_iam_instance_profile.instance_profile",
            "module.nomad-starter.module.nomad_cluster.aws_iam_role.instance_role",
            "module.nomad-starter.module.nomad_cluster.aws_iam_role_policy.cluster_discovery",
            "module.nomad-starter.module.nomad_cluster.aws_launch_configuration.nomad_clients",
            "module.nomad-starter.module.nomad_cluster.aws_launch_configuration.nomad_servers",
            "module.nomad-starter.module.nomad_cluster.aws_security_group.nomad",
            "module.nomad-starter.module.nomad_cluster.aws_security_group_rule.consul_api_ingress",
            "module.nomad-starter.module.nomad_cluster.aws_security_group_rule.consul_dns_ingress",
            "module.nomad-starter.module.nomad_cluster.aws_security_group_rule.consul_rpc",
            "module.nomad-starter.module.nomad_cluster.aws_security_group_rule.nomad_api_ingress",
            "module.nomad-starter.module.nomad_cluster.aws_security_group_rule.nomad_external_egress_http",
            "module.nomad-starter.module.nomad_cluster.aws_security_group_rule.nomad_ssh",
            "module.nomad-starter.module.nomad_cluster.data.aws_ami.ubuntu",
            "module.nomad-starter.module.nomad_cluster.data.aws_availability_zones.available",
            "module.nomad-starter.module.nomad_cluster.data.aws_iam_policy_document.cluster_discovery",
            "module.nomad-starter.module.nomad_cluster.data.aws_iam_policy_document.instance_role",
            "module.nomad-starter.module.nomad_cluster.data.aws_region.current",
            "module.nomad-starter.module.nomad_cluster.data.aws_subnet_ids.default",
            "module.nomad-starter.module.nomad_cluster.data.aws_vpc.nomad_vpc",
            "module.nomad-starter.module.nomad_cluster.random_id.consul_gossip_encryption_key",
            "module.nomad-starter.module.nomad_cluster.random_id.environment_name",
            "module.nomad-starter.module.nomad_cluster.random_uuid.consul_agent_server_token",
            "module.nomad-starter.module.nomad_cluster.random_uuid.consul_master_token",
            "module.nomad-starter.module.nomad_cluster.random_uuid.consul_snapshot_token",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nomad-starter.module.nomad_cluster",
      "mode": "data",
      "type": "aws_vpc",
      "name": "nomad_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:711129375688:vpc/vpc-01313e970d1060a21",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0ccd5f8bf755da907",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-ead6ea8d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01313e970d1060a21",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-047b27bc27cc95c40",
            "owner_id": "711129375688",
            "state": "available",
            "tags": {
              "Environment": "Snapshots",
              "Name": "snapshots-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.nomad-starter.module.nomad_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nomad",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:711129375688:security-group/sg-09dbcf3eae8dbc378",
            "description": "Nomad servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09dbcf3eae8dbc378",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 4646,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 4646
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8500,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8500
              }
            ],
            "name": "snapshots-88476a06-nomad-sg",
            "name_prefix": null,
            "owner_id": "711129375688",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-01313e970d1060a21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nomad-starter.module.nomad_cluster.random_id.environment_name",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nomad-starter.module.nomad_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_api_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 8500,
            "id": "sgrule-3852966338",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09dbcf3eae8dbc378",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8500,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nomad-starter.module.nomad_cluster.aws_security_group.nomad",
            "module.nomad-starter.module.nomad_cluster.random_id.environment_name",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nomad-starter.module.nomad_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_dns_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-4222416330",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09dbcf3eae8dbc378",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nomad-starter.module.nomad_cluster.aws_security_group.nomad",
            "module.nomad-starter.module.nomad_cluster.random_id.environment_name",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nomad-starter.module.nomad_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "consul_rpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 0,
            "id": "sgrule-3042981286",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09dbcf3eae8dbc378",
            "self": false,
            "source_security_group_id": "sg-09dbcf3eae8dbc378",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nomad-starter.module.nomad_cluster.aws_security_group.nomad",
            "module.nomad-starter.module.nomad_cluster.random_id.environment_name",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nomad-starter.module.nomad_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_api_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 4646,
            "id": "sgrule-518494954",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09dbcf3eae8dbc378",
            "self": false,
            "source_security_group_id": null,
            "to_port": 4646,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nomad-starter.module.nomad_cluster.aws_security_group.nomad",
            "module.nomad-starter.module.nomad_cluster.random_id.environment_name",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nomad-starter.module.nomad_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_external_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1919826441",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09dbcf3eae8dbc378",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nomad-starter.module.nomad_cluster.aws_security_group.nomad",
            "module.nomad-starter.module.nomad_cluster.random_id.environment_name",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nomad-starter.module.nomad_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "nomad_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-4026082620",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09dbcf3eae8dbc378",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nomad-starter.module.nomad_cluster.aws_security_group.nomad",
            "module.nomad-starter.module.nomad_cluster.random_id.environment_name",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:711129375688:internet-gateway/igw-0fd0eeb157a65f343",
            "id": "igw-0fd0eeb157a65f343",
            "owner_id": "711129375688",
            "tags": {
              "Environment": "Snapshots",
              "Name": "snapshots-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01313e970d1060a21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0fd0eeb157a65f343",
            "id": "r-rtb-010dfe5d9d76c9ca81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-010dfe5d9d76c9ca8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-010dfe5d9d76c9ca8",
            "owner_id": "711129375688",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd0eeb157a65f343",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Snapshots",
              "Name": "snapshots-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01313e970d1060a21"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afe0bc14c6efb1e5",
            "route_table_id": "rtb-010dfe5d9d76c9ca8",
            "subnet_id": "subnet-06db35cc2c42ea5c3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa101be5b485254a",
            "route_table_id": "rtb-010dfe5d9d76c9ca8",
            "subnet_id": "subnet-0ca5b1e69b9372fcc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:711129375688:subnet/subnet-06db35cc2c42ea5c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-06db35cc2c42ea5c3",
            "map_public_ip_on_launch": true,
            "owner_id": "711129375688",
            "tags": {
              "Environment": "Snapshots",
              "Name": "snapshots-vpc-public-ap-northeast-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01313e970d1060a21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:711129375688:subnet/subnet-0ca5b1e69b9372fcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0ca5b1e69b9372fcc",
            "map_public_ip_on_launch": true,
            "owner_id": "711129375688",
            "tags": {
              "Environment": "Snapshots",
              "Name": "snapshots-vpc-public-ap-northeast-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01313e970d1060a21"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:711129375688:vpc/vpc-01313e970d1060a21",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fabacaf337f3f9e6",
            "default_route_table_id": "rtb-047b27bc27cc95c40",
            "default_security_group_id": "sg-0886cbab343cb690f",
            "dhcp_options_id": "dopt-ead6ea8d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-01313e970d1060a21",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-047b27bc27cc95c40",
            "owner_id": "711129375688",
            "tags": {
              "Environment": "Snapshots",
              "Name": "snapshots-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}